<resources>
    <string name="app_name">MixMatch</string>
    <string name="title_activity_main">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">About Us</string>
    <string name="title_notifications">Search</string>
    <string name="action_settings">Settings</string>

    <string name="start">start</string>
    <string name="cancel">cancel</string>
    <string name="stop">stop record and recognize</string>
    <string name="recording">recording</string>
    <string name="volume">volume:</string>
    <string name="card_title">Movie Name</string>
    <string name="card_content">Cast</string>


</resources>
