<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="#61AD2A"
                android:shape="rectangle"
                android:text="@string/start"
                android:textColor="#ffffffff"
                android:textColorHighlight="#2E7D32" />

            <Button
                android:id="@+id/stop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColor="@color/colorAccent"
                android:background="#666666"
                android:layout_margin="16dp"
                android:textSize="15dp"
                android:text="@string/stop" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColorHighlight="#DB8484"
                android:textColor="@color/colorAccent"
                android:background="#E9CE3535"
                android:layout_margin="16dp"
                android:text="@string/cancel" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:visibility="gone"
                android:id="@+id/notfound"
                android:src="@drawable/notfound"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="25px"
                android:id="@+id/nomatch"
                android:visibility="gone"
                android:fontFamily="@font/permanent_marker"
                android:text="No Matches Found"
                android:textSize="30dp" />
            <com.wang.avi.AVLoadingIndicatorView
                android:visibility="gone"
                android:id="@+id/avi"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                app:indicatorColor="@color/colorPrimaryDark"
                app:indicatorName="LineScalePulseOutIndicator" />

            <TextView
                android:id="@+id/result"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
               />

            <TextView
                android:id="@+id/time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000" />

            <android.support.v7.widget.CardView
                android:visibility="gone"
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            />

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/card_title"
                android:id="@+id/title"
            android:textColor="#000"
            android:textSize="18sp" />

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:id="@+id/artist"
            android:textColor="#555" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/card_content"
                    android:id="@+id/album"
                    android:textColor="#555" />
            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Done"
            android:theme="@style/PrimaryFlatButton"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimary"
                android:id="@+id/done"/>
            </LinearLayout>
            </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>